finish supplier manage product function

--- a/HRStore/views/supplier_updateInfo.xml
+++ b/HRStore/views/supplier_updateInfo.xml
@@ -74,7 +74,7 @@
 			            			<ul>
 						            	<li><a href="/supplier_addProduct"> 发布商品</a></li>
                                     	<li><a href="/supplier_changeStatus"> 待审核</a></li>
-										<li><a href="ghs-published.html"> 已发布</a></li>
+										<li><a href="/supplier_publishedProduct"> 已发布</a></li>
                                     	<li><a href="ghs-order.html"> 订单</a></li>
                                     	<li><a href="/login">退出登录</a></li>
 						            </ul>
