--- a/HRStore/views/supplier_changeStatus.xml
+++ b/HRStore/views/supplier_changeStatus.xml
@@ -79,7 +79,7 @@
 						        <ul>
 							        <li><a href="/supplier_addProduct"> 发布商品</a></li>
                                     <li class="active" ><a href="/supplier_changeStatus"> 待审核</a></li>
-                                    <li><a href="ghs-published.html"> 已发布</a></li>
+                                    <li><a href="/supplier_publishedProduct"> 已发布</a></li>
                                     <li><a href="ghs-order.html"> 订单</a></li>
                                     <li><a href="/login">退出登录</a></li>
 						        </ul>
@@ -123,12 +123,6 @@
                                                 </span>
                                             </td>
                                             <td class="product-category"><span id="date" class="categories" t-esc="p.create_date"></span></td>
-                                            <td class="product-category">
-                                                <form action="/changeProductStatus">
-                                                    <input name="pro_id" type="hidden" t-att-value="p.id"/>
-                                                    <button class="btn btn-outline-success">通过</button>
-                                                </form>
-                                            </td>
                                             <td class="product-category">
                                                 <form action="/deleteProduct">
                                                     <input name="pro_id" type="hidden" t-att-value="p.id"/>
