--- a/HRStore/views/supplier_updateInfo.xml
+++ b/HRStore/views/supplier_updateInfo.xml
@@ -41,7 +41,7 @@
                                     </ul>
 						            <ul class="navbar-nav ml-auto mt-10">
                                         <li class="nav-item">
-            								<a href="index.html" /><img src="images/my.png" height="60px" width="50px" />
+            								<a href="index.html" /><img src="/HRStore/static/src/images/my.png" height="60px" width="50px" />
 			            				</li>
 						            </ul>
 					            </div>
@@ -75,7 +75,7 @@
 						            	<li><a href="/supplier_addProduct"> 发布商品</a></li>
                                     	<li><a href="/supplier_changeStatus"> 待审核</a></li>
 										<li><a href="/supplier_publishedProduct"> 已发布</a></li>
-                                    	<li><a href="ghs-order.html"> 订单</a></li>
+                                    	<li><a href="/supplier_orderlist"> 订单</a></li>
                                     	<li><a href="/login">退出登录</a></li>
 						            </ul>
 					            </div>
