--- a/HRStore/views/supplier_changeStatus.xml
+++ b/HRStore/views/supplier_changeStatus.xml
@@ -13,42 +13,62 @@
 		        <div class="row">
 			        <div class="col-md-12">
 				        <nav class="navbar navbar-expand-lg  navigation">
-					        <a class="navbar-brand" href="index.html">
-						        <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220" />
-					        </a>
+                                <a class="navbar-brand" href="/home">
+                                    <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
+                                </a>
+                                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                        aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                    <ul class="navbar-nav ml-auto main-nav ">
+                                        <li class="nav-item active">
+                                            <a class="nav-link" href="/home">首页</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/products?type=2">培训产品</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/products?type=1">活动策划</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/products?type=3">精美商品</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/products?type=4">法律服务</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/customer_service">在线客服</a>
+                                        </li>
+                                    </ul>
+                                    <t t-if="request.session.user_id">
+                                        <ul class="navbar-nav ml-auto mt-10">
+                                            <li class="nav-item">
+                                                <form action="/user_profile" method="post">
+                                                    <input type="hidden" name="csrf_token"
+                                                           t-att-value="request.csrf_token()"/>
+                                                    <input type="hidden" name="user_id"
+                                                           t-att-value="request.session.user_id"/>
+                                                    <input type="image"
+                                                           src="\HRStore\static\src\images\my.png" height="60px"/>
+                                                </form>
+                                            </li>
+                                        </ul>
+                                    </t>
+                                    <t t-else="">
 
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					            <span class="navbar-toggler-icon"></span>
-					        </button>
-
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-						        <ul class="navbar-nav ml-auto main-nav ">
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="/home">首页</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/products?type=2">培训产品</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/products?type=1">活动策划</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/products?type=3">精美商品</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/products?type=4">法律服务</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/customer_service">在线客服</a>
-                                    </li>
-                                </ul>
-						        <ul class="navbar-nav ml-auto mt-10">
-							        <li class="nav-item">
-								        <a  href="index.html"><img src="/HRStore/static/src/images/my.png" height="60px" width="50px" /></a>
-							        </li>
-						        </ul>
-					        </div>
-				        </nav>
+                                        <ul class="navbar-nav ml-auto mt-10">
+                                            <li class="nav-item">
+                                                <a class="nav-link login-button" href="/login">登陆</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link add-button" href="/sign_up">注册</a>
+                                            </li>
+                                        </ul>
+                                    </t>
+                                </div>
+                            </nav>
 			        </div>
 		        </div>
 	        </div>
@@ -66,13 +86,25 @@
 					        <!-- User Widget -->
 					        <div class="widget user-dashboard-profile">
 						        <!-- User Image -->
-						        <div class="profile-thumb">
-							        <img src="/HRStore/static/src/images/user/user-thumb.jpg" alt="" class="rounded-circle" />
-						        </div>
-						        <!-- User Name -->
-						        <h5 class="text-center"><span id="username" t-esc="request.session.user_id"></span></h5>
-				    		    <p><span id="u-tel" style="word-wrap:break-word;" t-esc="request.session.telephone"></span></p>
-		    				    <a href="/supplier_updateInfo" class="btn btn-main-sm">编辑</a>
+						        <t t-if="supplier">
+                                        <div class="profile-thumb">
+                                            <span t-field="supplier.user_image"
+                                                  t-options="{'widget': 'image', 'class': 'mx-auto d-block img-thumbnail'}"/>
+                                        </div>
+                                        <!-- User Name -->
+                                        <h5 class="text-center">
+                                            <span id="username" t-esc="supplier.user_id"></span>
+                                        </h5>
+                                        <p>
+                                            <span id="u-tel" style="word-wrap:break-word;"
+                                                  t-esc="supplier.telephone"></span>
+                                        </p>
+                                        <p>
+                                            <span id="u-tel" style="word-wrap:break-word;"
+                                                  t-esc="supplier.address"></span>
+                                        </p>
+                                    </t>
+                                    <a href="/supplier_updateInfo" class="btn btn-main-sm">编辑</a>
 					        </div>
 					        <!-- Dashboard Links -->
 					        <div class="widget user-dashboard-menu">
@@ -102,7 +134,10 @@
                                 <tbody>
                                     <tr t-foreach="products" t-as="p">
                                         <td class="product-thumb">
-                                          <img width="80px" height="auto" src="/HRStore/static/src/images/products/products-1.jpg" alt="image description" /></td>
+                                          <!--<img width="80px" height="auto" t-att-src="p.image_route" alt="image description" class="oe_avatar" />-->
+                                            <span t-field="p.pro_image"
+                                                                      t-options="{'widget': 'image', 'class': 'mx-auto d-block img-thumbnail'}"/>
+                                        </td>
                                             <td class="product-details">
                                                 <h3 class="title" t-esc="p.pro_name" />
                                                 <span class="add-id" id="business"><strong>商家:</strong><p t-esc="request.session.user_id"/></span>
